# SequenceStudio

./: LICENSE-COMMERCIAL  README.md  main.py  pyproject.toml  requirements.txt
sequencestudio/: __init__.py  app.py
sequencestudio/core/: alignment.py  blast.py  gene_prediction.py  io.py  orf.py  primer.py  restriction.py
sequencestudio/models/: sequence.py
sequencestudio/utils/: colors.py  style.py
sequencestudio/views/: alignment_view.py  blast_dialog.py  dot_plot.py  gene_prediction_view.py  main_window.py  orf_finder.py  primer_design.py  restriction_map.py  tree_view.py
